--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div id="score1">Player 1: 0</div>  
             <div id="score2">Player 2: 0</div>
         </div>
-
+        <img src="https://images.rawpixel.com/image_png_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjc4LTE3Ni1wLWwxNjRxcXZsLnBuZw.png" class="brain-image1">
+        <img src="https://images.rawpixel.com/image_png_800/czNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjc4LTE3Ni1wLWwxNjRxcXZsLnBuZw.png" class="brain-image2">
     </div>
 
     <script src="script.js"></script>
